--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Eleve tu negocio digital a otro nivel 
                 <strong class="titulo-destaque">con un Front-end de calidad!
                 </strong></h1>
-                <p class="presentacion__contenido__texto">¡Hola! Soy Lautaro Tirasso, desarrollador Front-end con
+                <p class="presentacion__contenido__texto">¡Hola! Soy Lautaro Tirasso, desarrollador Full-stack con
                     especialización en React, HTML y CSS. Ayudo a pequeños
                     negocios y diseñadores a llevar a cabo buenas ideas.
                     ¿Hablamos?
