--- a/about.html
+++ b/about.html
@@ -18,10 +18,11 @@
         <section class="presentacion__contenido">
             <h1 class="presentacion__contenido__titulo">Sobre mí</h1>
                 <p class="presentacion__contenido__texto"> 
-                    ¡Hola! Me llamo Lautaro Tirasso, tengo 23 años y soy desarrollador Ful-Stack.  Actualmente, me encuentro haciendo cursos del programa ONE de Alura LATAM, 
-                    trabajos Freelance y estudiante de Ingeniería en Informática. Manejo lenguajes como HTML, CSS, JavaScript y Python, con el uso de librerías y Frameworks, 
+                    ¡Hola! Me llamo Lautaro Tirasso, tengo 23 años y soy desarrollador Full-Stack.  Actualmente, me encuentro haciendo cursos del programa ONE de Alura LATAM, 
+                    realizo trabajos Freelance y estudio de Ingeniería en Informática. Manejo lenguajes como HTML, CSS, JavaScript y Python, con el uso de librerías y Frameworks, 
                     principalmente React, Angular, Node, Vite, Tailwind, tanto como en el uso de aplicaciones de diseño (WordPress, Jet Pack, Figma, Wix). 
-                    Conocimiento de herramientas de Marketing (Google Ads, Meta), sistemas de Inteligencia Artificial con Prompts, hasta posteo de blogs.
+                    Conocimiento de herramientas de Marketing (Google Ads, Meta), sistemas de Inteligencia Artificial con Prompts, Machine Learning, Base de datos,
+                    SQl y también incursionando en el mundo de las criptomonedas con aplicación de tecnologías Blockchain.
                 </p>
                 <p class="presentacion__contenido__texto">
                     Trabaje en otros ámbitos como atención al cliente, de cajero y más oficios. Siempre estuve en contacto con la tecnología
