--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <main class="presentacion">
         <section class="presentacion__contenido">
             <h1 class="presentacion__contenido__titulo">
-                Eleve tu negocio digital a otro nivel 
-                <strong class="titulo-destaque">con un desarrollador Full-stack de calidad!
+                Lleva tu negocio digital a otro nivel 
+                <strong class="titulo-destaque">con un desarrollador 
+                    Full-stack de calidad!
                 </strong></h1>
                 <p class="presentacion__contenido__texto">¡Hola! Soy Lautaro Tirasso, desarrollador Full-stack con
                     especialización en React, HTML y CSS. Ayudo a pequeños
