--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 class="presentacion__contenido__titulo">
                 Lleva tu negocio digital a otro nivel 
                 <strong class="titulo-destaque">con un desarrollador 
-                    Full-stack de calidad!
+                    <p>Full-stack de calidad!</p>
                 </strong></h1>
                 <p class="presentacion__contenido__texto">¡Hola! Soy Lautaro Tirasso, desarrollador Full-stack con
                     especialización en React, HTML y CSS. Ayudo a pequeños
