--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
                 <p class="presentacion__contenido__texto">
                     Trabaje en otros ámbitos como atención al cliente, de cajero y más oficios. Siempre estuve en contacto con la tecnología
                     y hoy en día es algo que me apasiona, empecé a estudiar desde mi casa haciendo cursos, entre en el programa ONE de Alura 
-                    para una capacitación Back-end y estudio en la facultad. Me interesa mucho todo lo relacionado con la Inteligencia Artificial,
+                    para una capacitación Back-end mientras sigo estudiando en la facultad Nacional de la Matanza. Me interesa mucho todo lo relacionado con la Inteligencia Artificial,
                     Diseño de Páginas, el acceso al conocimiento que nos da Internet y que algunas veces no es aprovechado. Levo hechos varios 
                     proyectos en JavaScript usando React, sé leer código, depurar, subir los proyectos a repositorios externos y trabajar en grupo.
-                    Me considero Responsable, Positivo, Sociable y Creativo.  Actualmente, me encuentro en la búsqueda que me permitan poner en 
+                    Me considero Responsable, Positivo, Sociable y Creativo.  Actualmente, me encuentro en la búsqueda de proyectos que me permitan poner en 
                     practica los conocimientos que fui adquiriendo en este viaje hacia ser programador que recién empieza y espero que siga
                     por muchos años más.
                 </p>
