--- a/about.html
+++ b/about.html
@@ -22,17 +22,16 @@
                     realizo trabajos Freelance y estudio Ingeniería en Informática. Manejo lenguajes como HTML, CSS, JavaScript y Python, con el uso de librerías y Frameworks, 
                     principalmente React, Angular, Node, Vite, Tailwind, tanto como en el uso de aplicaciones de diseño (WordPress, Jet Pack, Figma, Wix). 
                     Conocimiento de herramientas de Marketing (Google Ads, Meta), sistemas de Inteligencia Artificial con Prompts, Machine Learning, Base de datos,
-                    SQl y también incursionando en el mundo de las criptomonedas con aplicación de tecnologías Blockchain.
+                    SQl, Blockchain, diseño de blog, contenido, posteos y servicios de consultoria SEO/CEO.
                 </p>
                 <p class="presentacion__contenido__texto">
                     Trabaje en otros ámbitos como atención al cliente, de cajero y más oficios. Siempre estuve en contacto con la tecnología
                     y hoy en día es algo que me apasiona, empecé a estudiar desde mi casa haciendo cursos, entre en el programa ONE de Alura 
                     para una capacitación Back-end mientras sigo estudiando en la facultad Nacional de la Matanza. Me interesa mucho todo lo relacionado con la Inteligencia Artificial,
-                    Diseño de Páginas, el acceso al conocimiento que nos da Internet y que algunas veces no es aprovechado. Levo hechos varios 
+                    Diseño de Páginas, el acceso al conocimiento que nos da Internet y que algunas veces no es aprovechado. Llevo hechos varios 
                     proyectos en JavaScript usando React, sé leer código, depurar, subir los proyectos a repositorios externos y trabajar en grupo.
                     Me considero Responsable, Positivo, Sociable y Creativo.  Actualmente, me encuentro en la búsqueda de proyectos que me permitan poner en 
-                    practica los conocimientos que fui adquiriendo en este viaje hacia ser programador que recién empieza y espero que siga
-                    por muchos años más.
+                    practica los conocimientos que fui adquiriendo a lo largo de mi trayectoria.
                 </p>
                
         </section>
