--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 </p>
                
         </section>
-            <img class="presentacion__imagen" src="./assets/IMG_20241007_133152_HDR~2.jpg" alt="Foto de Lautaro Tirasso">
+            <img class="presentacion__imagen" src="./assets/Foto perfil.jpg" alt="Foto de Lautaro Tirasso">
     </main>
     <footer class="footer">
         <p></p>
