--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ l<!DOCTYPE html>
                 </p>
                
         </section>
-            <img class="presentacion__imagen" src="./assets/Foto perfil.jpg" alt="Foto de Lautaro Tirasso">
+            <img class="presentacion__imagen" src="./assets/Perfil Linke.jpeg" alt="Foto de Lautaro Tirasso">
     </main>
     <footer class="footer">
         <p></p>
