--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                
         </section>
-            <img class="presentacion__imagen" src="./assets/Foto perfil.jpg" alt="Lautaro Tirasso">
+            <img class="presentacion__imagen" src="./assets/Perfil Linke.jpeg" alt="Lautaro Tirasso">
     </main>
     <footer class="footer">
         <p></p>
