--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-l<!DOCTYPE html>
+fil<!DOCTYPE html>
 <html lang="es-mx">
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,7 @@ l<!DOCTYPE html>
                 </p>
                
         </section>
-            <img class="presentacion__imagen" src="./assets/Perfil Linke.jpeg" alt="Foto de Lautaro Tirasso">
+            <img class="presentacion__imagen" src="./assets/Perfil Linke.jp" alt="Foto de Lautaro Tirasso">
     </main>
     <footer class="footer">
         <p></p>
